Add: Login and Register styles complete

--- a/pages/LandingPage.html
+++ b/pages/LandingPage.html
@@ -32,7 +32,7 @@
 
 
 
-        <a href="#" class="cta nav__cta">Crea una ¡YA!</a>
+        <a href="Login.html" class="cta nav__cta">Crea una ¡YA!</a>
 
       </div>
     </nav>
@@ -49,7 +49,7 @@
           para gastar, ahorrar, presupuestar, invertir y mucho más.
         </p>
 
-        <a href="#" class="cta hero__cta">Únete a nosotros</a>
+        <a href="Login.html" class="cta hero__cta">Únete a nosotros</a>
       </div>
 
       <div class="hero__bg"></div>
@@ -201,7 +201,7 @@
             <img src="/img/logo-white.svg" class="footer__logo" alt="logo_footer">
           </figure>
           <div class="footer__social">
-            <a href="#" class="cta nav__cta">El número uno</a>
+            <a href="Login.html" class="cta nav__cta">El número uno</a>
           </div>
 
         </div>
