Add: NavBar and close app finished

--- a/pages/Login.html
+++ b/pages/Login.html
@@ -35,7 +35,8 @@
                     <div class="btn-log-1">
                         <a href="LandingPage.html" class="btn-link">Regresar</a>
                     </div>
-                    <input class="btn-log-2" type="submit" value="Ingresar">
+                    <!-- <input class="btn-log-2" type="submit" value="Ingresar"> -->
+                     <a href="HomePage.html" class="btn-log-2">Ingresar</a>
                 </div>
 
                 <div class="div-reg">
