Add: Credit Card Funtion Finished

--- a/pages/Login.html
+++ b/pages/Login.html
@@ -36,7 +36,7 @@
                         <a href="LandingPage.html" class="btn-link">Regresar</a>
                     </div>
                     <!-- <input class="btn-log-2" type="submit" value="Ingresar"> -->
-                     <a href="HomePage.html" class="btn-log-2">Ingresar</a>
+                     <a href="../components/HomePage.html" class="btn-log-2">Ingresar</a>
                 </div>
 
                 <div class="div-reg">
