Add: Fetch Login and Register Complete

--- a/pages/Login.html
+++ b/pages/Login.html
@@ -16,7 +16,7 @@
 
         </div>
         <div class="block-2">
-            <form action="" class="form">
+            <form action="" class="form" id="formLogin">
 
                 <figure>
                     <img src="../img/logo.svg" class="img-form" alt="logo-bank">
@@ -24,29 +24,34 @@
 
                 <div class="form-div">
                     <label for="username"><span class="edit">Nombre</span> de la cuenta:</label>
-                    <input type="text" id="username" name="username" class="form-input" placeholder="Escriba su usuario bancario...">
+                    <input type="text" id="username" name="username" class="form-input"
+                        placeholder="Escriba su usuario bancario...">
                 </div>
                 <div class="form-div">
                     <label for="password"><span class="edit">Contraseña</span> de la cuenta:</label>
-                    <input type="password" id="password" name="password" class="form-input" placeholder="Escriba su clave única...">
+                    <input type="password" id="password" name="password" class="form-input"
+                        placeholder="Escriba su clave única...">
                 </div>
 
                 <div class="form-button">
                     <div class="btn-log-1">
                         <a href="LandingPage.html" class="btn-link">Regresar</a>
                     </div>
-                    <!-- <input class="btn-log-2" type="submit" value="Ingresar"> -->
-                     <a href="../components/HomePage.html" class="btn-log-2">Ingresar</a>
+                    <input class="btn-log-2" type="submit" value="Ingresar">
                 </div>
 
                 <div class="div-reg">
                     <a href="Register.html" class="register-link">¿No tienes cuenta? Crea una</a>
                 </div>
 
+                <div id="loginMessage"></div>
+
+
             </form>
         </div>
     </div>
 
+    <script src="../JS//services/Login.js"></script>
     <script src="../JS/scrollreveal.js"></script>
     <script src="../JS/animation.js"></script>
 
