--- a/pages/AdminPage.html
+++ b/pages/AdminPage.html
@@ -25,7 +25,7 @@
 				</li>
 
 				<li>
-					<a href="#">
+					<a href="#" id="clientes-link">
 						<span class="icon">
 							<ion-icon name="people-outline"></ion-icon>
 						</span>
@@ -34,7 +34,7 @@
 				</li>
 
 				<li>
-					<a href="#">
+					<a href="#" id="tarjetas-link">
 						<span class="icon">
 							<ion-icon name="chatbubble-outline"></ion-icon>
 						</span>
@@ -43,7 +43,7 @@
 				</li>
 
 				<li>
-					<a href="#">
+					<a href="#" id="movimientos-link">
 						<span class="icon">
 							<ion-icon name="git-compare-outline"></ion-icon>
 						</span>
@@ -51,22 +51,13 @@
 					</a>
 				</li>
 
-				<li>
-					<a href="#">
-						<span class="icon">
-							<ion-icon name="settings-outline"></ion-icon>
-						</span>
-						<span class="title">Configuracion</span>
-					</a>
-				</li>
-
 
 				<li>
-					<a href="#">
+					<a href="#" id="salir-link">
 						<span class="icon">
 							<ion-icon name="log-out-outline"></ion-icon>
 						</span>
-						<span class="title">Sign Out</span>
+						<span class="title">Salir</span>
 					</a>
 				</li>
 			</ul>
@@ -91,52 +82,52 @@
 				</div>
 			</div>
 
-			<!--Detalles -->
-			<div class="details">
-				<div class="recentOrders">
-					<div class="cardHeader">
-						<h2>Clientes</h2>
-						<a href="#" class="btn">View All</a>
+			<!-- contenedor del contenido principal -->
+			<div id="content">
+				<!-- Aqui va el contenido que se actualiza,comentario de Juan -->
+				<div class="details">
+					<div class="recentOrders">
+						<div class="cardHeader">
+							<h2>Clientes</h2>
+						</div>
+
+						<table class="styled-table">
+							<thead>
+								<tr>
+									<td>ID</td>
+									<td>Usuario</td>
+									<td>Nombre Apellido</td>
+									<td>DUI</td>
+									<td>Banco</td>
+									<td>Tarjeta Digital</td>
+									<td>Número de Cuenta</td>
+								</tr>
+							</thead>
+
+							<tbody>
+								<tr>
+									<td>1</td>
+									<td>usuario1</td>
+									<td>Juan Pérez</td>
+									<td>12345678-9</td>
+									<td>Banco A</td>
+									<td>1234 5678 9012 3456</td>
+									<td>00123456789</td>
+								</tr>
+
+								<tr>
+									<td>2</td>
+									<td>usuario2</td>
+									<td>María López</td>
+									<td>98765432-1</td>
+									<td>Banco B</td>
+									<td>2345 6789 0123 4567</td>
+									<td>00987654321</td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
-
-					<table class="styled-table">
-						<thead>
-							<tr>
-								<td>ID</td>
-								<td>Usuario</td>
-								<td>Nombre Apellido</td>
-								<td>DUI</td>
-								<td>Banco</td>
-								<td>Tarjeta Digital</td>
-								<td>Número de Cuenta</td>
-							</tr>
-						</thead>
-
-						<tbody>
-							<tr>
-								<td>1</td>
-								<td>usuario1</td>
-								<td>Juan Pérez</td>
-								<td>12345678-9</td>
-								<td>Banco A</td>
-								<td>1234 5678 9012 3456</td>
-								<td>00123456789</td>
-							</tr>
-
-							<tr>
-								<td>2</td>
-								<td>usuario2</td>
-								<td>María López</td>
-								<td>98765432-1</td>
-								<td>Banco B</td>
-								<td>2345 6789 0123 4567</td>
-								<td>00987654321</td>
-							</tr>
-						</tbody>
-					</table>
 				</div>
-
-
 			</div>
 		</div>
 	</div>
